# store_backend

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  example.env  pyproject.toml
api/: admin.py
api/migrations/: 0001_initial.py  0002_alter_price_options_alter_product_options_and_more.py
api/models/: __init__.py  price.py  product.py  product_type.py
api/serializers/: __init__.py  price.py  product.py  product_type.py
api/views/: __init__.py  price.py  product.py  product_type.py
settings/: settings.py  urls.py
